decoder: h265: Fix offset calculation in codec_data parsing

https://bugzilla.gnome.org/show_bug.cgi?id=762922